# referral-hub

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  create_referrals.sh  docker-compose.yml
.github/workflows/: ci.yml
.sqlx/: query-25848a717f7671f16562bcc85162ef1cb6c1bdff8152726f2c3cdcb72680e906.json  query-4e81a62a6111ba2588cb70a45a34bf8f52e1a31ca4a49ea67fd2503a6c5ef250.json  query-723b1ca37867e6a3a152ae28de7d5c38f03cf37c1b211daaec84b618792ab57f.json  query-a8c66cd27c6d5a57a1259b2cba413fef37d9e7277f6aa419176c8720cd3ce5ce.json
migrations/: 20240101000000_create_referrals_table.sql
src/: cache.rs  config.rs  error.rs  handlers.rs  main.rs  models.rs  repository.rs
src/tests/: mod.rs
