[package]
name = "referral-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "chrono"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
dotenv = "0.15.0"
env_logger = "0.11.2"
log = "0.4.20"
thiserror = "1.0.57"
rand = "0.8.5"
chrono = { version = "0.4.34", features = ["serde"] }
redis = { version = "0.23", features = ["tokio-comp"] }

[dev-dependencies]
tokio-test = "0.4"
